--- a/ankur/index.html
+++ b/ankur/index.html
@@ -114,6 +114,13 @@
             left: 188px;
         }
         
+        .silex-id-1519140420973-15 {
+            width: 224px;
+            min-height: 797px;
+            top: 71px;
+            left: 103px;
+        }
+        
         .silex-id-1478366450713-3 {
             top: 100px;
             left: NaNpx;
@@ -134,7 +141,7 @@
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgba(255,255,255,1)","background-image":""},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"305px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","opacity":""},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent","background-image":"","background-size":"cover","background-attachment":"scroll","background-position":"center center","opacity":""},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1518940288119-2":{"min-height":"500px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1518940288119-1":{"top":"200px","left":"NaNpx","background-image":"url('images/Mental-Retardation-In-Children.jpg')","background-size":"cover","background-repeat":"no-repeat","background-attachment":"scroll"},"silex-id-1518940538589-4":{"min-height":"404px","background-color":"rgba(255,255,255,1)","background-image":"","top":"15px","left":"100px","width":"960px"},"silex-id-1518943363833-6":{"min-height":"400px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1518943493934-8":{"width":"294px","min-height":"77px","top":"18px","left":"256px"},"silex-id-1518946882944-9":{"width":"189px","min-height":"93px","top":"4px","left":"322px"},"silex-id-1519137898261-0":{"width":"90px","min-height":"42px","top":"46px","left":"501px"},"silex-id-1519138566422-4":{"width":"294px","min-height":"77px","top":"18px","left":"256px"},"silex-id-1519138566422-3":{"width":"786px","background-color":"rgb(255, 255, 255)","min-height":"82px","top":"406px","left":"76px"},"silex-id-1519138566422-2":{"min-height":"500px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1519139175859-6":{"width":"71px","min-height":"27px","top":"78px","left":"83px"},"silex-id-1519139203424-7":{"width":"71px","min-height":"27px","top":"78px","left":"176px"},"silex-id-1519139222627-8":{"width":"71px","min-height":"27px","top":"76px","left":"276px"},"silex-id-1519139602241-10":{"min-height":"500px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1519139637824-11":{"width":"539px","min-height":"1285px","top":"74px","left":"188px"},"silex-id-1519140184783-14":{"width":"261px","min-height":"43px","top":"111px","left":"188px"},"silex-id-1519140184783-13":{"min-height":"500px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1519140184783-12":{"top":"100px","left":"NaNpx","background-image":"url('images/38676157-education-wallpapers.jpg')","background-size":"cover","background-repeat":"no-repeat","background-attachment":"scroll"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgba(255,255,255,1)","background-image":""},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"53px","width":"349px","top":"29px","left":"305px"},"silex-id-1478366444112-0":{"min-height":"100px","background-color":"transparent","opacity":""},"silex-id-1478366444112-1":{"top":"100px","left":"NaNpx","background-color":"transparent","background-image":"","background-size":"cover","background-attachment":"scroll","background-position":"center center","opacity":""},"silex-id-1478366450713-2":{"min-height":"100px","background-color":"transparent"},"silex-id-1478366450713-3":{"top":"100px","left":"NaNpx","background-color":"transparent"},"silex-id-1518940288119-2":{"min-height":"500px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1518940288119-1":{"top":"200px","left":"NaNpx","background-image":"url('images/Mental-Retardation-In-Children.jpg')","background-size":"cover","background-repeat":"no-repeat","background-attachment":"scroll"},"silex-id-1518940538589-4":{"min-height":"404px","background-color":"rgba(255,255,255,1)","background-image":"","top":"15px","left":"100px","width":"960px"},"silex-id-1518943363833-6":{"min-height":"400px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1518943493934-8":{"width":"294px","min-height":"77px","top":"18px","left":"256px"},"silex-id-1518946882944-9":{"width":"189px","min-height":"93px","top":"4px","left":"322px"},"silex-id-1519137898261-0":{"width":"90px","min-height":"42px","top":"46px","left":"501px"},"silex-id-1519138566422-4":{"width":"294px","min-height":"77px","top":"18px","left":"256px"},"silex-id-1519138566422-3":{"width":"786px","background-color":"rgb(255, 255, 255)","min-height":"82px","top":"406px","left":"76px"},"silex-id-1519138566422-2":{"min-height":"500px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1519139175859-6":{"width":"71px","min-height":"27px","top":"78px","left":"83px"},"silex-id-1519139203424-7":{"width":"71px","min-height":"27px","top":"78px","left":"176px"},"silex-id-1519139222627-8":{"width":"71px","min-height":"27px","top":"76px","left":"276px"},"silex-id-1519139602241-10":{"min-height":"500px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1519139637824-11":{"width":"625px","min-height":"1298px","top":"61px","left":"188px"},"silex-id-1519140184783-14":{"width":"261px","min-height":"43px","top":"111px","left":"188px"},"silex-id-1519140184783-13":{"min-height":"500px","background-color":"transparent","background-image":"","background-size":"cover"},"silex-id-1519140184783-12":{"top":"100px","left":"NaNpx","background-image":"url('images/38676157-education-wallpapers.jpg')","background-size":"cover","background-repeat":"no-repeat","background-attachment":"scroll"},"silex-id-1519140420973-15":{"width":"100px","min-height":"100px","top":"62px","left":"103px"}},"mobile":{},"componentData":{}}]
     </script>
 
 
@@ -157,7 +164,7 @@
 
 
     <style id="current-page-style">
-        .page-home {
+        .page-about-us {
             display: inherit;
         }
     </style>
@@ -172,7 +179,7 @@
                 class="silex-element-content">
         </div>
 
-        <a id="page-home" data-silex-type="page" class="page-element page-link-active">Home</a><a id="page-about-us" data-silex-type="page" class="page-element">About Us</a></div>
+        <a id="page-home" data-silex-type="page" class="page-element">Home</a><a id="page-about-us" data-silex-type="page" class="page-element page-link-active">About Us</a></div>
 
 
 
@@ -196,10 +203,10 @@
                     <font size="5">school</font>
                 </div>
             </div>
-            <div data-silex-type="text" class="editable-style silex-id-1519139175859-6 text-element page-link-active" data-silex-id="silex-id-1519139175859-6" style="" data-silex-href="#!page-home">
+            <div data-silex-type="text" class="editable-style silex-id-1519139175859-6 text-element" data-silex-id="silex-id-1519139175859-6" style="" data-silex-href="#!page-home">
                 <div class="silex-element-content normal">Home</div>
             </div>
-            <div data-silex-type="text" class="editable-style text-element silex-id-1519139203424-7" data-silex-id="silex-id-1519139203424-7" style="" data-silex-href="#!page-about-us">
+            <div data-silex-type="text" class="editable-style text-element silex-id-1519139203424-7 page-link-active" data-silex-id="silex-id-1519139203424-7" style="" data-silex-href="#!page-about-us">
                 <div class="silex-element-content normal">About Us</div>
             </div>
             <div data-silex-type="text" class="editable-style text-element silex-id-1519139222627-8" data-silex-id="silex-id-1519139222627-8" style="">
@@ -249,6 +256,13 @@
             <div data-silex-type="text" class="editable-style text-element page-home paged-element silex-id-1519140184783-14" data-silex-id="silex-id-1519140184783-14" style="">
                 <div class="silex-element-content normal">
                     <font color="#ffff00" size="6"><b>home page content</b></font>
+                </div>
+            </div>
+            <div data-silex-type="text" class="editable-style silex-id-1519140420973-15 text-element" data-silex-id="silex-id-1519140420973-15" style="">
+                <div class="silex-element-content normal">
+                    <p class="normal">Boudin eu laboris, ball tip t-bone dolor meatloaf in veniam lorem ullamco consequat duis. Spare ribs pork esse ex picanha, pork chop consectetur veniam frankfurter. Et jowl cupidatat minim alcatra. Ground round buffalo sed, swine corned
+                        beef nisi in commodo. Hamburger culpa commodo, duis aliquip ullamco drumstick salami buffalo boudin aute cow fugiat. Short ribs beef ball tip ut ham hock aute veniam landjaeger cupidatat doner ex. Ea magna biltong, ground round
+                        veniam nulla pork.</p>
                 </div>
             </div>
         </div>
